# dissect.evidence

./: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py
dissect/evidence/: __init__.py  ad1.py  ewf.py  exceptions.py
dissect/evidence/asdf/: __init__.py  asdf.py  streams.py
dissect/evidence/tools/asdf/: dd.py  meta.py  repair.py  verify.py
tests/: conftest.py  test_ad1.py  test_asdf.py  test_ewf.py
tests/data/: ad1_long.ad1  ad1_test.ad1  ad1_test_compressed.ad1  ewf.E01
